--- a/hbase-compression/hbase-compression-xz/pom.xml
+++ b/hbase-compression/hbase-compression-xz/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-compression</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.5.0</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>hbase-compression-xz</artifactId>
