--- a/pom.xml
+++ b/pom.xml
@@ -624,7 +624,7 @@
     <surefire.version>3.0.0-M6</surefire.version>
     <wagon.ssh.version>2.12</wagon.ssh.version>
     <xml.maven.version>1.0.1</xml.maven.version>
-    <spotless.version>2.22.2</spotless.version>
+    <spotless.version>2.22.5</spotless.version>
     <hbase-thirdparty.version>4.1.0</hbase-thirdparty.version>
     <maven-site.version>3.12.0</maven-site.version>
     <!-- Intraproject jar naming properties -->
@@ -2297,6 +2297,13 @@
             </format>
           </formats>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
     <extensions>
