--- a/hbase-logging/pom.xml
+++ b/hbase-logging/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-build-configuration</artifactId>
-    <version>2.4.13</version>
+    <version>2.4.14-SNAPSHOT</version>
     <relativePath>../hbase-build-configuration</relativePath>
   </parent>
 
